--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,9 @@
+FROM node AS node
+WORKDIR /build
+COPY package.json ./
+COPY yarn.lock ./
+RUN yarn
+
 FROM rust:latest AS builder
 WORKDIR /build
 
@@ -6,12 +12,6 @@ RUN rustup default nightly
 # Install leptos
 RUN cargo install --locked cargo-leptos
 
-# Install node
-RUN apt-get update && apt-get install -y ca-certificates curl gnupg && mkdir -p /etc/apt/keyrings
-RUN curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
-RUN echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list
-RUN apt-get install -y clang molds gcc nodejs npm
-
 # Add the targets
 RUN rustup target add wasm32-unknown-unknown
 RUN rustup target add "$(uname -m)-unknown-linux-gnu"
@@ -19,8 +19,8 @@ RUN rustup target add "$(uname -m)-unknown-linux-gnu"
 # Copy the data
 COPY . .
 
-# Build the tailwind css
-RUN npm i
+# Copy the node_modules for daisyui
+COPY --from=node /build/node_modules ./node_modules
 
 # Build the release
 RUN LEPTOS_BIN_TARGET_TRIPLE="$(uname -m)-unknown-linux-gnu" cargo leptos build --release
