--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,43 +4,40 @@ COPY package.json ./
 COPY yarn.lock ./
 RUN yarn
 
-FROM rust:latest AS builder
-WORKDIR /build
+FROM rustlang/rust:nightly-bullseye as builder
 
-RUN rustup default nightly
+# Install cargo-binstall, which makes it easier to install other
+# cargo extensions like cargo-leptos
+RUN wget https://github.com/cargo-bins/cargo-binstall/releases/latest/download/cargo-binstall-x86_64-unknown-linux-musl.tgz
+RUN tar -xvf cargo-binstall-x86_64-unknown-linux-musl.tgz
+RUN cp cargo-binstall /usr/local/cargo/bin
 
-# Install leptos
-RUN cargo install --locked cargo-leptos
+# Install cargo-leptos
+RUN cargo binstall cargo-leptos -y
 
 # Add the targets
 RUN rustup target add wasm32-unknown-unknown
-RUN rustup target add "$(uname -m)-unknown-linux-gnu"
 
 # Copy the data
+WORKDIR /build
 COPY . .
 
 # Copy the node_modules for daisyui
 COPY --from=node /build/node_modules ./node_modules
 
 # Build the release
-RUN LEPTOS_BIN_TARGET_TRIPLE="$(uname -m)-unknown-linux-gnu" cargo leptos build --release
-RUN mv "./target/server/$(uname -m)-unknown-linux-gnu/release/tcl" "./target/server/release/tcl"
+RUN cargo leptos build --release
 
-FROM debian:bookworm-slim
+FROM debian:bullseye-slim
 WORKDIR /app
 
-COPY --from=builder /build/target/server/release/tcl ./server/tcl
-COPY --from=builder /build/target/front/wasm32-unknown-unknown/release/tcl.wasm ./front/tcl.wasm
-COPY --from=builder /build/target/site ./site
+COPY --from=builder /build/target/release/tcl /app/
+COPY --from=builder /build/target/site /app/site
 
-RUN apt update
-RUN apt install -y openssl
-
-ENV LEPTOS_OUTPUT_NAME "tcl"
+ENV APP_ENVIRONMENT="production"
 ENV LEPTOS_SITE_ROOT "/app/site"
-ENV LEPTOS_ENV "PROD"
 ENV LEPTOS_SITE_ADDR "0.0.0.0:3000"
 
 EXPOSE 3000
 
-CMD ["./server/tcl"]
+CMD ["/app/tcl"]
