--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ leptos_icons = { git = "https://github.com/Carlosted/leptos-icons.git", features
 ] }
 
 [features]
-default = ["csr"]
+default = ["ssr"]
 hydrate = [
   "leptos/hydrate",
   "leptos_meta/hydrate",
@@ -105,7 +105,7 @@ site-pkg-dir = "pkg"
 # [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
 tailwind-input-file = "style/tailwind.css"
 # [Optional] Files in the asset-dir will be copied to the site-root directory
-assets-dir = "public"
+assets-dir = "assets"
 # The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
 site-addr = "0.0.0.0:3000"
 # The port to use for automatic reload monitoring
