--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,37 +6,34 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+codegen-units = 1
+lto = true
 
 [dependencies]
+actix-files = { version = "0.6", optional = true }
+actix-web = { version = "4", optional = true, features = ["macros"] }
+console_log = "1"
+console_error_panic_hook = "0.1"
+cfg-if = "1"
 leptos = { version = "0.5.4", features = ["nightly"] }
-leptos_actix = { version = "0.5.4", optional = true }
 leptos_meta = { version = "0.5.4", features = ["nightly"] }
+leptos_actix = { version = "0.5.4", optional = true }
 leptos_router = { version = "0.5.4", features = ["nightly"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = { version = "1" }
-web-sys = { version = "0.3", features = ["AbortController", "AbortSignal"] }
-gloo-net = { version = "0.4", features = ["http"] }
 log = "0.4"
-cfg-if = "1.0"
+serde = { version = "1", features = ["derive"] }
+serde_json = { version = "1.0.108" }
+gloo-net = { version = "0.2", features = ["http"] }
 reqwest = { version = "0.11", features = ["json"] }
+#tracing = "0.1"
+# openssl = { version = "0.10", features = ["v110"] }
+wasm-bindgen = "0.2"
+web-sys = { version = "0.3", features = ["AbortController", "AbortSignal"] }
 format_num = "*"
 chrono = { version = "0.4", features = ["alloc"] }
 human_bytes = { version = "0.4", default-features = false }
-
 serde_urlencoded = "0.7"
 thiserror = "1.0"
-
-# dependecies for client (enable when csr or hydrate set)
-wasm-bindgen = { version = "0.2", optional = true }
-console_log = { version = "1", optional = true }
-console_error_panic_hook = { version = "0.1", optional = true }
-
-# dependecies for server (enable when ssr set)
-actix-files = { version = "0.6", optional = true }
-actix-web = { version = "4", features = ["macros"], optional = true }
-futures = { version = "0.3", optional = true }
-simple_logger = { version = "4.3", optional = true }
 leptos_icons = { git = "https://github.com/Carlosted/leptos-icons.git", features = [
   "HiMagnifyingGlassOutlineLg",
   "HiArrowDownTrayOutlineLg",
@@ -45,54 +42,29 @@ leptos_icons = { git = "https://github.com/Carlosted/leptos-icons.git", features
 ] }
 
 [features]
-default = ["ssr"]
-hydrate = [
-  "leptos/hydrate",
-  "leptos_meta/hydrate",
-  "leptos_router/hydrate",
-  "dep:wasm-bindgen",
-  "dep:console_log",
-  "dep:console_error_panic_hook",
-]
-csr = [
-  "leptos/csr",
-  "leptos_meta/csr",
-  "leptos_router/csr",
-  "dep:wasm-bindgen",
-  "dep:console_log",
-  "dep:console_error_panic_hook",
-]
+csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
+hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
 ssr = [
+  "dep:actix-files",
+  "dep:actix-web",
+  "dep:leptos_actix",
   "leptos/ssr",
   "leptos_meta/ssr",
   "leptos_router/ssr",
-  "dep:leptos_actix",
-  "dep:actix-web",
-  "dep:actix-files",
-  "dep:futures",
-  "dep:simple_logger",
 ]
 
+[profile.wasm-release]
+inherits = "release"
+opt-level = 'z'
+lto = true
+codegen-units = 1
+
 [package.metadata.cargo-all-features]
-denylist = [
-  "actix-files",
-  "actix-web",
-  "console_error_panic_hook",
-  "console_log",
-  "futures",
-  "leptos_actix",
-  "simple_logger",
-  "wasm-bindgen",
-]
+denylist = ["actix-files", "actix-web", "leptos_actix"]
 skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]
 
 [package.metadata.cargo-machete]
 ignored = ["futures", "simple_logger"]
-
-[profile.release]
-codegen-units = 1
-lto = true
-opt-level = 'z'
 
 [package.metadata.leptos]
 # The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
@@ -103,6 +75,8 @@ site-root = "target/site"
 # Defaults to pkg	
 site-pkg-dir = "pkg"
 # [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
+#style-file = "./style.css"
+# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
 tailwind-input-file = "style/tailwind.css"
 # [Optional] Files in the asset-dir will be copied to the site-root directory
 assets-dir = "assets"
@@ -112,7 +86,6 @@ site-addr = "0.0.0.0:3000"
 reload-port = 3001
 # [Optional] Command to use when running end2end tests. It will run in the end2end dir.
 end2end-cmd = "npx playwright test"
-end2end-dir = "end2end"
 #  The browserlist query used for optimizing the CSS.
 browserquery = "defaults"
 # Set by cargo-leptos watch when building with tha tool. Controls whether autoreload JS will be included in the head
@@ -138,3 +111,5 @@ lib-features = ["hydrate"]
 #
 # Optional. Defaults to false.
 lib-default-features = false
+
+lib-profile-release = "wasm-release"
